{
  "version": 4,
  "terraform_version": "1.8.1",
  "serial": 75,
  "lineage": "0a7fd6cd-aac0-2e4d-b859-bbec12d93895",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:285729811195:subnet/subnet-0974074df80d17075",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "available_ip_address_count": 4091,
            "cidr_block": "172.31.0.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "filter": [
              {
                "name": "availability-zone",
                "values": [
                  "us-east-1a"
                ]
              },
              {
                "name": "default-for-az",
                "values": [
                  "true"
                ]
              },
              {
                "name": "vpc-id",
                "values": [
                  "vpc-0977ca86c1e50d5c7"
                ]
              }
            ],
            "id": "subnet-0974074df80d17075",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "285729811195",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "state": "available",
            "vpc_id": "vpc-0977ca86c1e50d5c7"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:285729811195:vpc/vpc-0977ca86c1e50d5c7",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-07d331857e626e57e",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0220fad9fbb49c2c7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0977ca86c1e50d5c7",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0bb5859aee40d043e",
            "owner_id": "285729811195",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.vpn_instance",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:285729811195:subnet/subnet-0974074df80d17075",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "available_ip_address_count": 4091,
            "cidr_block": "172.31.0.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0974074df80d17075",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "285729811195",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "state": "available",
            "vpc_id": "vpc-0977ca86c1e50d5c7"
          }
        }
      ]
    },
    {
      "module": "module.vpn_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-09c813fb71547fc4f",
            "arn": "arn:aws:ec2:us-east-1:285729811195:instance/i-09c511c2d670718f2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09c511c2d670718f2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0865c81408a3f7335",
            "private_dns": "ip-172-31-13-180.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.13.180",
            "public_dns": "ec2-3-226-248-16.compute-1.amazonaws.com",
            "public_ip": "3.226.248.16",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0abe15867a25df742",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "-20250704050858689000000001",
              "vpn_sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0974074df80d17075",
            "tags": {
              "Environment": "DEV",
              "Project": "Roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "DEV",
              "Project": "Roboshop",
              "Terraform": "true"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Environment": "DEV",
              "Project": "Roboshop",
              "Terraform": "true"
            },
            "vpc_security_group_ids": [
              "sg-01534ce90190eea8f",
              "sg-05b34372ab5f3504d"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_security_group_ids"
              }
            ]
          ],
          "dependencies": [
            "data.aws_ami.amazon_linux_Redhat",
            "data.aws_ssm_parameter.vpn_sg_id",
            "data.aws_subnet.default",
            "data.aws_vpc.default",
            "module.vpn_instance.aws_iam_instance_profile.this",
            "module.vpn_instance.aws_iam_role.this",
            "module.vpn_instance.aws_security_group.this",
            "module.vpn_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.vpn_instance.data.aws_partition.current",
            "module.vpn_instance.data.aws_ssm_parameter.this",
            "module.vpn_instance.data.aws_subnet.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpn_instance",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:285729811195:security-group/sg-05b34372ab5f3504d",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-05b34372ab5f3504d",
            "ingress": [],
            "name": "-20250704050858689000000001",
            "name_prefix": "-",
            "owner_id": "285729811195",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "DEV",
              "Name": "",
              "Project": "Roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "",
              "Project": "Roboshop",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0977ca86c1e50d5c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnet.default",
            "data.aws_vpc.default",
            "module.vpn_instance.data.aws_subnet.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpn_instance",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ipv4_default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:285729811195:security-group-rule/sgr-0c6128894ab021fc4",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all IPv4 traffic",
            "from_port": null,
            "id": "sgr-0c6128894ab021fc4",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-05b34372ab5f3504d",
            "security_group_rule_id": "sgr-0c6128894ab021fc4",
            "tags": {
              "Environment": "DEV",
              "Name": "-ipv4_default",
              "Project": "Roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "-ipv4_default",
              "Project": "Roboshop",
              "Terraform": "true"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnet.default",
            "data.aws_vpc.default",
            "module.vpn_instance.aws_security_group.this",
            "module.vpn_instance.data.aws_subnet.this"
          ]
        },
        {
          "index_key": "ipv6_default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:285729811195:security-group-rule/sgr-03a24fc1ef29e2b31",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": "Allow all IPv6 traffic",
            "from_port": null,
            "id": "sgr-03a24fc1ef29e2b31",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-05b34372ab5f3504d",
            "security_group_rule_id": "sgr-03a24fc1ef29e2b31",
            "tags": {
              "Environment": "DEV",
              "Name": "-ipv6_default",
              "Project": "Roboshop",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "DEV",
              "Name": "-ipv6_default",
              "Project": "Roboshop",
              "Terraform": "true"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnet.default",
            "data.aws_vpc.default",
            "module.vpn_instance.aws_security_group.this",
            "module.vpn_instance.data.aws_subnet.this"
          ]
        }
      ]
    }
  ]
}